--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -31,7 +31,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
 			<type>jar</type>
 			<scope>provided</scope>
@@ -90,7 +90,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>
             <scope>provided</scope>
 		</dependency>
@@ -120,13 +120,13 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.user.ws</groupId>
 			<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
+			<groupId>org.wso2.carbon.identity.framework</groupId>
 			<artifactId>org.wso2.carbon.identity.mgt.stub</artifactId>
 			<scope>provided</scope>
 		</dependency>
