--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -64,7 +64,7 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
-        <groupId>org.wso2.carbon.identity</groupId>
+        <groupId>org.wso2.carbon.identity.framework</groupId>
         <artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>
         <scope>provided</scope>
     </dependency>
@@ -101,7 +101,7 @@
         <!--<version>2.0.4-SNAPSHOT</version>-->
     <!--</dependency>-->
     <dependency>
-        <groupId>org.wso2.carbon.identity</groupId>
+        <groupId>org.wso2.carbon.identity.framework</groupId>
         <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
         <scope>provided</scope>
     </dependency>
