--- a/components/ids-data-publisher/pom.xml
+++ b/components/ids-data-publisher/pom.xml
@@ -68,7 +68,7 @@
             <version>${carbon.analytics.common.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.framework</groupId>
             <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
         </dependency>
         <dependency>
