--- a/components/sample-request/pom.xml
+++ b/components/sample-request/pom.xml
@@ -55,7 +55,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.framework</groupId>
             <artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>
             <scope>provided</scope>
         </dependency>
@@ -92,7 +92,7 @@
         <!--<version>2.0.4-SNAPSHOT</version>-->
         <!--</dependency>-->
         <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.framework</groupId>
             <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
             <scope>provided</scope>
         </dependency>
