--- a/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
+++ b/features/com.wso2telco.ids.sessionupdater.ui.feature/pom.xml
@@ -26,12 +26,7 @@
             <version>${carbon.kernel.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
-            <artifactId>org.wso2.carbon.identity.mgt.stub</artifactId>
-            <version>${identity.framework.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
+            <groupId>org.wso2.carbon.identity.user.ws</groupId>
             <artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
             <version>${identity.user.ws.version}</version>
         </dependency>       
@@ -147,10 +142,10 @@
                                     org.wso2.carbon:org.wso2.carbon.authenticator.stub:${carbon.kernel.version}                                   
                                 </bundleDef>
                                 <bundleDef>
-                                    org.wso2.carbon.identity:org.wso2.carbon.identity.mgt.stub:${identity.framework.version}
+                                    org.wso2.carbon.identity.framework:org.wso2.carbon.identity.mgt.stub:${identity.framework.version}
                                 </bundleDef>
                                 <bundleDef>
-                                    org.wso2.carbon.identity:org.wso2.carbon.um.ws.api.stub:${identity.user.ws.version}
+                                    org.wso2.carbon.identity.user.ws:org.wso2.carbon.um.ws.api.stub:${identity.user.ws.version}
                                 </bundleDef>                                
                                 <bundleDef>
                                     commons-codec.wso2:commons-codec:${commons-codec.version}                                  
