created sp-provision-service module

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
         <module>components/auth-proxy-service</module>
         <module>components/sign</module>
         <module>components/session-updater</module>
+        <module>components/sp-provision-service</module>
         <module>components/portal</module>
         <module>components/dashboard</module>
         <module>components/authentication-endpoint</module>
