--- a/components/sp-provision-service/pom.xml
+++ b/components/sp-provision-service/pom.xml
@@ -21,105 +21,206 @@
 <name>Service Provider Provisioning Service</name>
 
 <dependencies>
+    <!--<dependency>-->
+        <!--<groupId>junit</groupId>-->
+        <!--<artifactId>junit</artifactId>-->
+        <!--<scope>test</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>org.apache.httpcomponents</groupId>-->
+        <!--<artifactId>httpclient</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>javax.servlet</groupId>-->
+        <!--<artifactId>servlet-api</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.google.gdata.wso2</groupId>-->
+        <!--<artifactId>gdata-core</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>commons-fileupload.wso2</groupId>-->
+        <!--<artifactId>commons-fileupload</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.sun.jersey</groupId>-->
+        <!--<artifactId>jersey-server</artifactId>-->
+        <!--<version>1.17.1</version>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.sun.jersey</groupId>-->
+        <!--<artifactId>jersey-core</artifactId>-->
+        <!--<version>1.17.1</version>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.sun.jersey</groupId>-->
+        <!--<artifactId>jersey-servlet</artifactId>-->
+        <!--<version>1.17.1</version>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>org.wso2.carbon.identity</groupId>-->
+        <!--<artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>org.wso2.carbon</groupId>-->
+        <!--<artifactId>org.wso2.carbon.utils</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.wso2telco.ids</groupId>-->
+        <!--<artifactId>openid-extension</artifactId>-->
+        <!--<version>2.4.0-SNAPSHOT</version>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.wso2telco.ids</groupId>-->
+        <!--<artifactId> openid-token-builder</artifactId>-->
+        <!--<version>2.4.0-SNAPSHOT</version>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.wso2telco.core</groupId>-->
+        <!--<artifactId>config-util</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.wso2telco.core</groupId>-->
+        <!--<artifactId>dbutils</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+        <!--&lt;!&ndash;<groupId>com.wso2telco.core</groupId>&ndash;&gt;-->
+        <!--&lt;!&ndash;<artifactId>dbutils</artifactId>&ndash;&gt;-->
+        <!--&lt;!&ndash;<version>2.0.4-SNAPSHOT</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+    <!--<dependency>-->
+        <!--<groupId>org.wso2.carbon.identity</groupId>-->
+        <!--<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.wso2telco.ids</groupId>-->
+        <!--<artifactId>ids-data-publisher</artifactId>-->
+        <!--<version>2.4.0-SNAPSHOT</version>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>com.wso2telco.ids</groupId>-->
+        <!--<artifactId>common-util</artifactId>-->
+        <!--<version>2.4.0-SNAPSHOT</version>-->
+        <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>org.apache.httpcomponents</groupId>-->
+        <!--<artifactId>httpasyncclient</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>net.iharder</groupId>-->
+        <!--<artifactId>base64</artifactId>-->
+        <!--<version>RELEASE</version>-->
+        <!--<scope>compile</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>org.wso2.carbon</groupId>-->
+        <!--<artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>-->
+        <!--<version>RELEASE</version>-->
+        <!--<scope>compile</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+        <!--<groupId>org.wso2.carbon</groupId>-->
+        <!--<artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>-->
+        <!--<version>RELEASE</version>-->
+        <!--<scope>compile</scope>-->
+    <!--</dependency>-->
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>4.4.5</version>
+        <type>jar</type>
+    </dependency>
+    <dependency>
+        <groupId>com.vaadin.external.google</groupId>
+        <artifactId>android-json</artifactId>
+        <version>0.0.20131108.vaadin1</version>
+        <type>jar</type>
+    </dependency>
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-web-api</artifactId>
+        <version>7.0</version>
+        <scope>provided</scope>
+    </dependency>
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
+        <version>3.8.1</version>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.42</version>
+    </dependency>
+    <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>javax.servlet.jsp.jstl</artifactId>
+        <version>1.2.5-b03</version>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet.jsp.jstl</groupId>
+        <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+        <version>1.2.1</version>
     </dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-        <scope>provided</scope>
+        <version>4.5.2</version>
     </dependency>
     <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20170516</version>
     </dependency>
     <dependency>
-        <groupId>com.google.gdata.wso2</groupId>
-        <artifactId>gdata-core</artifactId>
-        <scope>provided</scope>
+        <groupId>org.apache.ibatis</groupId>
+        <artifactId>ibatis-sqlmap</artifactId>
+        <version>2.3.0</version>
     </dependency>
     <dependency>
-        <groupId>commons-fileupload.wso2</groupId>
-        <artifactId>commons-fileupload</artifactId>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-server</artifactId>
-        <version>1.17.1</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-core</artifactId>
-        <version>1.17.1</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-servlet</artifactId>
-        <version>1.17.1</version>
-        <scope>provided</scope>
+        <groupId>net.iharder</groupId>
+        <artifactId>base64</artifactId>
+        <version>2.3.8</version>
     </dependency>
     <dependency>
         <groupId>org.wso2.carbon.identity</groupId>
-        <artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>
-        <scope>provided</scope>
+        <artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
+        <version>5.1.3</version>
     </dependency>
     <dependency>
         <groupId>org.wso2.carbon</groupId>
-        <artifactId>org.wso2.carbon.utils</artifactId>
-        <scope>provided</scope>
+        <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
+        <version>4.2.0</version>
     </dependency>
     <dependency>
-        <groupId>com.wso2telco.ids</groupId>
-        <artifactId>openid-extension</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
-        <scope>provided</scope>
+        <groupId>org.wso2.carbon</groupId>
+        <artifactId>org.wso2.carbon.user.mgt.stub</artifactId>
+        <version>4.2.0</version>
     </dependency>
     <dependency>
-        <groupId>com.wso2telco.ids</groupId>
-        <artifactId> openid-token-builder</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
-        <scope>provided</scope>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
     </dependency>
     <dependency>
         <groupId>com.wso2telco.core</groupId>
         <artifactId>config-util</artifactId>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.wso2telco.core</groupId>
-        <artifactId>dbutils</artifactId>
-        <scope>provided</scope>
-    </dependency>
-    <!--<dependency>-->
-        <!--<groupId>com.wso2telco.core</groupId>-->
-        <!--<artifactId>dbutils</artifactId>-->
-        <!--<version>2.0.4-SNAPSHOT</version>-->
-    <!--</dependency>-->
-    <dependency>
-        <groupId>org.wso2.carbon.identity</groupId>
-        <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.wso2telco.ids</groupId>
-        <artifactId>ids-data-publisher</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.wso2telco.ids</groupId>
-        <artifactId>common-util</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpasyncclient</artifactId>
     </dependency>
 </dependencies>
 
