--- a/components/sp-provision-service/pom.xml
+++ b/components/sp-provision-service/pom.xml
@@ -34,46 +34,15 @@
         <type>jar</type>
     </dependency>
     <dependency>
-        <groupId>javax</groupId>
-        <artifactId>javaee-web-api</artifactId>
-        <version>7.0</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>3.8.1</version>
         <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.42</version>
-    </dependency>
-    <dependency>
-        <groupId>org.glassfish.web</groupId>
-        <artifactId>javax.servlet.jsp.jstl</artifactId>
-        <version>1.2.5-b03</version>
-    </dependency>
-    <dependency>
-        <groupId>javax.servlet.jsp.jstl</groupId>
-        <artifactId>javax.servlet.jsp.jstl-api</artifactId>
-        <version>1.2.1</version>
-    </dependency>
-    <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.5.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.json</groupId>
-        <artifactId>json</artifactId>
-        <version>20170516</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.ibatis</groupId>
-        <artifactId>ibatis-sqlmap</artifactId>
-        <version>2.3.0</version>
     </dependency>
     <dependency>
         <groupId>net.iharder</groupId>
@@ -86,16 +55,6 @@
         <version>5.1.3</version>
     </dependency>
     <dependency>
-        <groupId>org.wso2.carbon</groupId>
-        <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
-        <version>4.2.0</version>
-    </dependency>
-    <!--<dependency>-->
-        <!--<groupId>org.wso2.carbon</groupId>-->
-        <!--<artifactId>org.wso2.carbon.user.mgt.stub</artifactId>-->
-        <!--<version>4.2.0</version>-->
-    <!--</dependency>-->
-    <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
@@ -107,6 +66,20 @@
     <dependency>
         <groupId>org.wso2.carbon.identity</groupId>
         <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.2</version>
+    </dependency>
+    <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>3.10.0</version>
+    </dependency>
+    <dependency>
+        <groupId>com.wso2telco.core</groupId>
+        <artifactId>dbutils</artifactId>
     </dependency>
 </dependencies>
 
