--- a/components/sp-provision-service/src/main/webapp/WEB-INF/web.xml
+++ b/components/sp-provision-service/src/main/webapp/WEB-INF/web.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
-    <!--<servlet>
-        <servlet-name>ServletAdaptor</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ServletAdaptor</servlet-name>
-        <url-pattern>/*</url-pattern>
-    </servlet-mapping>-->
-
     <servlet>
         <description>JAX-RS Tools Generated</description>
         <servlet-name>JAX-RS Servlet</servlet-name>
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>com.wso2telco.serviceprovider.provision.entity</param-value>
+            <param-value>com.wso2telco.spprovisionapp.entity</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
