--- a/features/com.wso2telco.ids.spprovisionservice.feature/pom.xml
+++ b/features/com.wso2telco.ids.spprovisionservice.feature/pom.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>component-ids-feature</artifactId>
         <groupId>com.wso2telco.ids</groupId>
+        <artifactId>component-ids-feature</artifactId>
         <version>2.4.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.wso2telco.ids.spprovision.feature</artifactId>
+    <artifactId>com.wso2telco.ids.spprovisionservice.feature</artifactId>
     <packaging>pom</packaging>
-    <name>Service Provider Provision - Feature</name>
+    <name>Service Provider Provision</name>
 
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
+                <version>2.6.1</version>
                 <executions>
                     <execution>
                         <id>auto-clean</id>
@@ -36,6 +36,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -61,6 +62,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.9</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -74,7 +76,7 @@
                                     <artifactId>sp-provision-service</artifactId>
                                     <version>${com.wso2telco.ids.version}</version>
                                     <type>war</type>
-                                    <destFileName>service-provider-provision.war</destFileName>
+                                    <destFileName>spprovisionservice.war</destFileName>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>${project.basedir}/src/main/resources/generated</outputDirectory>
@@ -94,15 +96,16 @@
                             <goal>p2-feature-gen</goal>
                         </goals>
                         <configuration>
-                            <id>com.wso2telco.ids.spprovision</id>
-                            <propertiesFile>../etc/feature.properties</propertiesFile>
+                            <id>com.wso2telco.ids.spprovisionservice</id>
+                            <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
                                     <propertyDef>org.wso2.carbon.p2.category.type:console</propertyDef>
                                     <propertyDef>org.eclipse.equinox.p2.type.group:true</propertyDef>
                                 </properties>
                             </adviceFile>
-                            <bundles />
+                            <bundles>
+                            </bundles>
                         </configuration>
                     </execution>
                 </executions>
@@ -110,4 +113,11 @@
         </plugins>
     </build>
 
+
+
 </project>
+
+
+
+
+
