--- a/features/pom.xml
+++ b/features/pom.xml
@@ -30,6 +30,6 @@
         <module>com.wso2telco.ids.premiuminfo.feature</module>
         <module>com.wso2telco.ids.samplerequest.feature</module>
         <module>com.wso2telco.ids.selfserviceportal.feature</module>
-        <module>com.wso2telco.ids.spprovision.feature</module>
+        <module>com.wso2telco.ids.spprovisionservice.feature</module>
     </modules>
 </project>
