--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -22,7 +22,7 @@
     <groupId>com.wso2telco.ids</groupId>
     <artifactId>component-ids</artifactId>
     <packaging>pom</packaging>
-    <version>2.3.0</version>
+    <version>2.4.0-SNAPSHOT</version>
     <name>WSO2Telco Core - Component</name>
     <description>WSO2Telco Core Aggregate Perent pom</description>
     <url>http://wso2telco.com</url>
@@ -1690,7 +1690,7 @@
         <org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
 
         <org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>
-        <com.wso2telco.core.version>2.4.3-SNAPSHOT</com.wso2telco.core.version>
+        <com.wso2telco.core.version>2.4.4-SNAPSHOT</com.wso2telco.core.version>
         <httpasyncclient.version>4.0</httpasyncclient.version>
         <httpcore-nio.version>4.3</httpcore-nio.version>
         <org.codehaus.jettison.version>1.3.7</org.codehaus.jettison.version>
