removed react unused imports and added .gitignore entries for react files

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ target
 *release.properties
 features/com.wso2telco.ids.dashboard.ui.feature/src/main/resources/generated/dashboard.zip
 components/self-service-portal/src/angular-source/node_modules
+components/self-service-portal/src/main/react/build/
+components/self-service-portal/src/main/react/node_modules/
