--- a/features/com.wso2telco.ids.selfserviceportal.feature/pom.xml
+++ b/features/com.wso2telco.ids.selfserviceportal.feature/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <name>Self Service Portal API Feature</name>
+    <name>Self Service Portal Feature</name>
     <artifactId>com.wso2telco.ids.selfserviceportal.feature</artifactId>
 
     <build>
