--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -146,6 +146,14 @@
                 <warName>authproxy</warName>
             </configuration>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
     </plugins>
 </build>
 </project>
