--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids</artifactId>
-		<version>2.4.0-SNAPSHOT</version>
+		<version>2.4.0-rc2</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc2</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
