--- a/components/sample-request/pom.xml
+++ b/components/sample-request/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>component-ids</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>2.4.0-rc2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <packaging>war</packaging>
@@ -67,13 +67,13 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>openid-extension</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId> openid-token-builder</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -99,13 +99,13 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>common-util</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.0-rc2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
