--- a/features/com.wso2telco.ids.saaserver.feature/pom.xml
+++ b/features/com.wso2telco.ids.saaserver.feature/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>component-ids-feature</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.4.0-rc2</version>
+        <version>2.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
