--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>com.wso2telco.ids</groupId>
     <artifactId>component-ids</artifactId>
     <packaging>pom</packaging>
-    <version>2.4.0-rc2</version>
+    <version>2.4.0-SNAPSHOT</version>
     <name>WSO2Telco Core - Component</name>
     <description>WSO2Telco Core Aggregate Pom</description>
     <url>http://wso2telco.com</url>
@@ -153,7 +153,7 @@
         <url>https://github.com/WSO2Telco/component-ids.git</url>
         <developerConnection>scm:git:https://github.com/WSO2Telco/component-ids.git</developerConnection>
         <connection>scm:git:https://github.com/WSO2Telco/component-ids.git</connection>
-        <tag>v2.4.0_rc2</tag>
+        <tag>v2_3_0-rc6</tag>
     </scm>
 
 
@@ -1741,7 +1741,7 @@
         <org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
         <hash.ids.version>1.0.1</hash.ids.version>
         <!--from intermediate pom -->
-        <com.wso2telco.ids.version>2.4.0-rc2</com.wso2telco.ids.version>
+        <com.wso2telco.ids.version>2.4.0-SNAPSHOT</com.wso2telco.ids.version>
         <org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
         <org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
         <!--org.wso2.carbon.identity.provider.version>5.0.7</org.wso2.carbon.identity.provider.version-->
