--- a/components/openid-extension/pom.xml
+++ b/components/openid-extension/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>component-ids</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>2.4.0-rc3</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
